# dvc-lab

./: .gitignore  README.md  dvc.yaml  pyproject.toml
data/: .gitignore
docker/: Dockerfile  app.py  deploy.sh  requirements.txt
src/: featurize.py  health_check.py  preprocessing.py  train_model.py
